Bug 387486, editor in grid overflows, r+sr+a=roc